--- a/web/package.json
+++ b/web/package.json
@@ -6,19 +6,26 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "biome:check": "biome check --write"
   },
   "dependencies": {
+    "@biomejs/biome": "^2.0.6",
+    "@radix-ui/react-collapsible": "^1.1.11",
+    "@radix-ui/react-progress": "^1.1.7",
     "lucide-react": "^0.522.0",
+    "motion": "^12.19.2",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-dropzone": "^14.3.8",
+    "tailwind-variants": "^1.0.0",
+    "zustand": "^5.0.6"
   },
   "devDependencies": {
     "@tailwindcss/vite": "^4.1.10",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react": "^4.4.1",
-    "biome": "^0.3.3",
     "globals": "^16.0.0",
     "tailwindcss": "^4.1.10",
     "typescript": "~5.8.3",
